feat(daemon): menu-bar Open BossTerm — focus/launch the GUI
The daemon's menu now opens the BossTerm window: DaemonLauncher.openGui() does macOS open <App>.app (focus-or-launch, single instance) when packaged, else spawns a GUI instance via the same JRE+classpath (dev/other). Wired to the tray menu item and to double-click on the icon.

Generated with [Claude Code](https://claude.com/claude-code)